src/tess/tl/test/fail/test_fail_integer_narrowing_reassign.tl
#module main

// Narrowing: Int value assigned to CInt variable via reassignment should fail.

main() {
    x: CInt := 0
    a: Int  := 42
    x = a
    0
}
